--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/SimasDei/nodejs-203#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "moment": "^2.24.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
